# concord-bft

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build_and_test_clang_debug.yml  build_and_test_clang_release.yml  build_and_test_gcc_debug.yml  build_and_test_gcc_release.yml  codecoverage.yml
bftengine/src/bftengine/: IncomingMsgsStorageImp.cpp  IncomingMsgsStorageImp.hpp  ReplicaImp.cpp  ReplicaImp.hpp  SigManager.cpp
client/bftclient/src/: bft_client.cpp
example/: CMakeLists.txt  README.md  common_constants.hpp
example/client/: .gitignore  CMakeLists.txt  main.cpp
example/client/include/: MessageParser.hpp  MessageSender.hpp  MsgReader.hpp  MsgSender.hpp  SKVBCTestsBuilder.hpp  SetupClient.hpp  setup_client.hpp
example/client/src/: MessageParser.cpp  MessageSender.cpp  MsgReader.cpp  MsgSender.cpp  SKVBCTestsBuilder.cpp  SetupClient.cpp  setup_client.cpp
example/cmf/: CMakeLists.txt
example/comm-config/: CMakeLists.txt  CommunicationConfig.cpp  CommunicationConfig.hpp
example/config/: CMakeLists.txt  commonDefs.h  itest_comm_config.hpp  test_comm_config.cpp  test_comm_config.hpp  test_parameters.hpp
example/replica/: CMakeLists.txt  main.cpp
example/replica/include/: InternalCommandsHandler.hpp  Setup.hpp  SetupReplica.hpp  setup_replica.hpp
example/replica/src/: InternalCommandsHandler.cpp  KVCommandHandler.cpp  Setup.cpp  SetupReplica.cpp  setup_replica.cpp
example/sample-msgs/: msg-1
example/scripts/: replica_conf  test_example.sh
examples/: CMakeLists.txt  README.md
examples/scripts/: test_osexample.py.in
kvbc/include/: ClientImp.h
kvbc/src/: ClientImp.cpp
scripts/: prepare-code-coverage-artifact.py  run-codecoverage.sh
tests/apollo/: CMakeLists.txt  test_osexample_demo.py  test_skvbc.py
tests/apollo/util/: skvbc.py
tests/simpleKVBC/TesterClient/: basicRandomTestsRunner.cpp  basicRandomTestsRunner.hpp  main.cpp  simpleKVBTestsBuilder.cpp  simpleKVBTestsBuilder.hpp
